test/fail_compile/bad_arrows.tas
b->c+5 // must fail
b->c*a // must fail
